# Vision-CIFAR-100

./: .gitignore  README.md  commands.txt  pyproject.toml
src/: main.py
src/configs/: config.yaml
src/data/: __init__.py  dataloaders.py
src/models/: __init__.py  cnn_models.py  resnet.py  transformers_models.py
src/scripts/: __init__.py  plot_data.py  run_test.py  time_fcts.py
src/utils/: SAM.py  SE.py  log_checkpoint.py  losses.py  optim.py  run.py  transforms.py
